--- a/app.scss
+++ b/app.scss
@@ -49,12 +49,23 @@ nav {
   grid-column: 1;
   display: flex;
   flex-direction: column;
+  /*Disable Scrollbar On Nav*/
+  height: 100%;
+  overflow-x: hidden;
+  overflow-y: hidden;
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
   button {
     margin-top: 1em;
     margin-left: 0.15em;
     margin-right: 0.15em;
   }
 }
+/*Hide Scrollbar On Nav*/
+nav::-webkit-scrollbar {
+  display: none;
+}
+
  /*Nav Bar Styling*/
 .navbar {
   position: sticky;
