--- a/app.scss
+++ b/app.scss
@@ -14,7 +14,7 @@ body {
   background-color: #FEEDEB;
 
   display: grid;
-  grid-template-columns: 5rem auto;
+  grid-template-columns: 5rem auto auto auto;
   grid-template-rows: auto auto auto auto auto auto;
 }
 
@@ -32,7 +32,7 @@ header {
   @extend %gradient-top-border;
   background-color: #E0E0E0;
   grid-column-start: 2;
-  grid-column-end: 3;
+  grid-column-end: 5;
   grid-row: 1;
 
   h1 {
@@ -69,6 +69,7 @@ nav::-webkit-scrollbar {
  /*Nav Bar Styling*/
 .navbar {
   position: sticky;
+  top: 0;
   background-color: var(--bg-primary);
   transition: width 600ms ease;
   overflow: scroll;
@@ -107,16 +108,48 @@ nav::-webkit-scrollbar {
   }
 }
 
-
 article {
+  margin-left: 0.5em;
+  margin-right: 0.5em;
   p {
     font-family: 'Open Sans', helvetica, sans-serif;
   }
 }
 
 #home_article {
+  grid-row: 5;
+  grid-column-start: 2;
+  grid-column-end: 5;
+}
+
+/*General Info Styling*/
+.gen_info {
   grid-row: 4;
-  grid-column: 2;
+  grid-column: 3;
+  margin-bottom: 1em;
+  padding: 1em;
+  background-color: white;
+  border-radius: 10px;
+}
+
+.gen_info h3 {
+  font-family: 'Antic Didone', helvetica, serif;
+  color: #fb9fa4;
+  font-size: 1.17em;
+  font-weight: bolder;
+  text-align: center;
+}
+
+.gen_info_items {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+  gap: 1em;
+}
+
+.gen_info_items li {
+  color: #f88277;
 }
 
 %slide_size_small_screens {
@@ -134,7 +167,8 @@ article {
   margin-bottom: 1em;
   position: relative;
   overflow: hidden;
-  grid-column: 2;
+  grid-column-start: 2;
+  grid-column-end: 5;
   grid-row: 3;
 }
 
