--- a/app.scss
+++ b/app.scss
@@ -111,6 +111,7 @@ nav::-webkit-scrollbar {
 article {
   margin-left: 0.5em;
   margin-right: 0.5em;
+  margin-bottom: 1em;
   p {
     font-family: 'Open Sans', helvetica, sans-serif;
   }
@@ -130,26 +131,51 @@ article {
   padding: 1em;
   background-color: white;
   border-radius: 10px;
+
+  h3 {
+    font-family: 'Antic Didone', helvetica, serif;
+    color: #fb9fa4;
+    font-size: 1.17em;
+    font-weight: bolder;
+    text-align: center;
+  }
+
+  .gen_info_items {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    gap: 1em;
+  }
+
+  li {
+    color: #f88277;
+  }
 }
 
-.gen_info h3 {
-  font-family: 'Antic Didone', helvetica, serif;
-  color: #fb9fa4;
-  font-size: 1.17em;
-  font-weight: bolder;
-  text-align: center;
-}
+/*Footer*/
+footer {
+  grid-column-start: 2;
+  grid-column-end: 5;
+  grid-row: 6;
+  padding: 1em;
+  background-color: #FB9FA4;
 
-.gen_info_items {
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  justify-content: center;
-  gap: 1em;
-}
+  h3 {
+    font-family: 'Antic Didone', helvetica, serif;
+    color: #8F8F8F;
+    font-size: 1.17em;
+    font-weight: bolder;
+    text-align: center;
+  }
 
-.gen_info_items li {
-  color: #f88277;
+  h4 {
+    font-family: 'Antic Didone', helvetica, serif;
+    color: #8F8F8F;
+    font-size: 1em;
+    font-weight: bolder;
+    text-align: center;
+  }
 }
 
 %slide_size_small_screens {
@@ -157,7 +183,6 @@ article {
   max-width: 100%;
   height: 55vw;
 }
-
 
 /* Slideshow container */
 * {box-sizing:border-box}
